--- a/MVC_Core_Quan_Ly_Trung_Tam_TA/Views/Shared/_HeadPage.cshtml
+++ b/MVC_Core_Quan_Ly_Trung_Tam_TA/Views/Shared/_HeadPage.cshtml
@@ -5,9 +5,9 @@
     <div class="container">
         <div class="row head_page">
             <div class="col-5">
-                <p>MVC_Core Quản lý trung tâm tiếng anh</p>
+                <p>VTBEARS</p>
             </div>
-            <div class="col-6"><p>VTBEARS</p> </div>
+            <div class="col-6"><p>MVC_Core Quản lý trung tâm tiếng anh</p> </div>
         </div>
     </div>
 }
